--- a/locales/fr/translation.json
+++ b/locales/fr/translation.json
@@ -9,7 +9,7 @@
           "pitch": "xdcc-webapp"
         },
         "menu": {
-          "home":"Accueil"
+          "bots":"Bots"
         }
     }
 }
