--- a/locales/fr/translation.json
+++ b/locales/fr/translation.json
@@ -1,15 +1,16 @@
 {
-    "locale": "Français",
-    "app": {
-        "angularLocale" : "francais",
-        "title": {
-            "global": "xdcc-webapp"
-        },
-        "home": {
-          "pitch": "xdcc-webapp"
-        },
-        "menu": {
-          "bots":"Bots"
-        }
+  "locale": "Français",
+  "app": {
+    "angularLocale": "francais",
+    "title": {
+      "global": "xdcc-webapp"
+    },
+    "home": {
+      "pitch": "Télécharger des fichiers facilement avec "
+    },
+    "menu": {
+      "bots": "Bots",
+      "login": "Se connecter"
     }
+  }
 }
