--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -10,7 +10,8 @@
     },
     "menu": {
       "bots": "Bots",
-      "login": "Log in"
+      "login": "Log in",
+      "logout": "Log out"
     }
   }
 }
