--- a/locales/fr/translation.json
+++ b/locales/fr/translation.json
@@ -10,7 +10,8 @@
     },
     "menu": {
       "bots": "Bots",
-      "login": "Se connecter"
+      "login": "Se connecter",
+      "logout": "Se déconnecter"
     }
   }
 }
