update bot list template

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -20,6 +20,9 @@
         "password": "Password",
         "log_in": "Log in"
       }
+    },
+    "bot_list": {
+      "search": "search a bot..."
     }
   }
 }
