update bot show template, refactoring

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -23,6 +23,11 @@
     },
     "bot_list": {
       "search": "search a bot..."
+    },
+    "bot": {
+      "search": "search a pack...",
+      "download": "Download",
+      "inspect": "Inspect"
     }
   }
 }
