--- a/locales/fr/translation.json
+++ b/locales/fr/translation.json
@@ -23,6 +23,11 @@
     },
     "bot_list": {
       "search": "rechercher un bot..."
+    },
+    "bot": {
+      "search": "rechercher un pack...",
+      "download": "Télécharger",
+      "inspect": "Inspecter"
     }
   }
 }
