--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -31,7 +31,7 @@
       "inspect": "Inspect"
     },
     "queue": {
-      "empty": "The queue is currently empty.",
+      "empty": "The queue is currently empty",
       "search": "search a pack...",
       "remove": "Remove from queue"
     }
