show packs in order in the queue template

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -34,6 +34,7 @@
     },
     "queue": {
       "empty": "The queue is currently empty",
+      "current_pack": "Pack currently downloading",
       "search": "Filter by title",
       "remove": "Remove from queue"
     }
